# bitoids-rs

./: .gitignore  Cargo.toml  README.md  justfile  main.rs
.cargo/: config.toml
.github/workflows/: build.yml
assets/: index.html
scripts/: build-wasm.sh
src/: lib.rs
