[package]
edition = "2021"
name = "bitoids"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
strip = "debuginfo"

[dependencies]
aabb-quadtree = "0.2.0"
quadtree_rs = "0.1.2"
rand = "0.8.5"
rstar = "0.9.3"

[dependencies.bevy]
default-features = false
features = ["render", "bevy_winit", "png"]
git = "https://github.com/bevyengine/bevy"
version = "0.8.0-dev"

##########
# NOT WASM

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
features = [
  "dynamic",
  "bevy_animation",
  "bevy_core_pipeline",
  "trace",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "filesystem_watcher",
  "serialize",
]
git = "https://github.com/bevyengine/bevy"
version = "0.8.0-dev"

##########
# WASM

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy-inspector-egui = {version = "0.8", optional = true}
colored = {version = "2.0", optional = true}
getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = "0.2.80"

# bevy = {git = "https://github.com/bevyengine/bevy", version = "0.8.0-dev", default-features = false, features = ["bevy_core_pipeline", "render", "trace", "bevy_winit", "png"]}
