[package]
edition = "2021"
license = "private"
name = "bitoids"
resolver = "2"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
incremental = true
lto = "fat"
opt-level = "z"
strip = "debuginfo"

[dependencies]
aabb-quadtree = "0.2.0"
bevy = {version = "0.10.1", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "serialize",
  "trace",
  "png",
]}
bevy-inspector-egui = {version = "0.18.3", optional = true}
colored = {version = "2.0", optional = true}
console_error_panic_hook = "0.1.7"
getrandom = {version = "0.2", features = ["js"]}
quadtree_rs = "0.1.3"
rand = "0.8.5"
rstar = "0.11.0"
tracing-wasm = "0.2.1"
wasm-bindgen = {version = "0.2", default-features = false}
wasm-bindgen-futures = "0.4"
